--- a/w7_d1_l1.ipynb
+++ b/w7_d1_l1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ae9a51d4",
+   "id": "8a9001c0",
    "metadata": {},
    "source": [
     "# Lab | Revisiting Machine Learning Case Study\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ba0b76dd",
+   "id": "08f7c7f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "17ec56d0",
+   "id": "53128819",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "0781a476",
+   "id": "b0b43408",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "71916349",
+   "id": "8ba337d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,8 +83,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "6db4ba78",
+   "execution_count": 91,
+   "id": "1c0d0ca7",
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
        "4        X        X        A  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,8 +644,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "2d99fb39",
+   "execution_count": 92,
+   "id": "34ff8306",
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
        "Length: 74, dtype: int64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,8 +678,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "88d8a694",
+   "execution_count": 93,
+   "id": "29e03489",
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,7 @@
        "['OSOURCE', 'ZIP']"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,8 +703,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "6544e645",
+   "execution_count": 94,
+   "id": "89dc82e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,8 +721,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "d81debcf",
+   "execution_count": 95,
+   "id": "1c07ce59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,8 +731,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "94f8398e",
+   "execution_count": 96,
+   "id": "8e2841dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,8 +741,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "dfb438ce",
+   "execution_count": 97,
+   "id": "ea2adc66",
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +751,7 @@
        "31"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,8 +762,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "317b047f",
+   "execution_count": 98,
+   "id": "e65f31eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,8 +775,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "f6bd37c6",
+   "execution_count": 99,
+   "id": "598c1bdb",
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1117,7 @@
        "4        X        A  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1128,36 +1128,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "17be4a70",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F    51277\n",
-      "M    39094\n",
-      "U     1715\n",
-      "J      365\n",
-      "C        2\n",
-      "A        2\n",
-      "Name: GENDER, dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Reduce the number of categories in the column GENDER. \n",
-    "# The column should only have either \"M\" for males, \"F\" for females, and \"other\" for all the rest\n",
-    "\n",
-    "print(categorical['GENDER'].value_counts())\n",
-    "categorical['GENDER'] = categorical['GENDER'].fillna('F')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "id": "eb7efaa4",
+   "execution_count": 101,
+   "id": "dc728e93",
    "metadata": {},
    "outputs": [
     {
@@ -1175,37 +1147,36 @@
     }
    ],
    "source": [
+    "# Reduce the number of categories in the column GENDER. \n",
+    "# The column should only have either \"M\" for males, \"F\" for females, and \"other\" for all the rest\n",
+    "\n",
+    "categorical['GENDER'] = categorical['GENDER'].fillna('F')\n",
     "print(categorical['GENDER'].value_counts())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "408ceb41",
+   "id": "06849998",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Option 1 Function\n",
+    "\n",
     "def clean_gender(x):\n",
     "    if x in  [\"F\",\"M\"]:\n",
     "        return x\n",
     "    else:\n",
-    "        return \"other\""
+    "        return \"other\"\n",
+    "    \n",
+    "categorical['GENDER']=categorical['GENDER'].apply(lambda x: clean_gender(x))\n",
+    "categorical['GENDER'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "b6a8aa30",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "categorical['GENDER']=categorical['GENDER'].apply(lambda x: clean_gender(x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "id": "603ad4e6",
+   "execution_count": 104,
+   "id": "1dbff14f",
    "metadata": {},
    "outputs": [
     {
@@ -1217,22 +1188,17 @@
        "Name: GENDER, dtype: int64"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Option2 List comprehension\n",
+    "\n",
+    "categorical['GENDER']= [ gender if gender in [\"F\",\"M\"] else \"other\" for gender in categorical['GENDER'] ]\n",
     "categorical['GENDER'].value_counts()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bfbbc772",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
